# cse20133

./: cse20133_syllabus.ipynb  cse_20133_main.html  cse_20133_main.ipynb
.a/lec08/: Makefile  bird_flap.c  parallel_lib.c
.a/lec11/: static_basic.c  static_pbr.c
.a/lec19/: argc_argv_mod.c  lec19_sol.c
.a/lec21/: structs.c
.a/lec22/: struct_align_fix.c
.a/lec23/: lec23.c
.a/lec31/: class_intro.cpp
.a/lec36/: 3d_plot.cpp  Makefile  scatter.cpp
.a/lec37/: electric.cpp  sin_cos.cpp
.ipynb_checkpoints/: cse20133_syllabus-checkpoint.ipynb
Lab12/: LIS.cpp  LIS.h  Lab12.cpp  Makefile
Lecture37/: Makefile  Moore.cpp  NDFightSongFSM.cpp
Lecture38/: Makefile  hanoi.cpp  iterator.cpp  max_stack.h  quadPair.cpp  quadPair2.cpp  stackTest.cpp
Lecture39/: Makefile  hanoi.cpp  nameGood  nameGood.cpp  nameGood2  nameGood2.cpp  namespace.cpp
Lecture40/: Makefile  Student.cpp  Student.h  Tower.h  ageHash.cpp  bucketSort.cpp  countSort.cpp  queueTest.cpp  treeTest.cpp
assets/: docker_debugging.ipynb
exams/exam1/: Midterm Exam 1 Review.ipynb  Midterm Exam Review.ipynb
exams/exam2/: Midterm Exam 2 Review.ipynb
group/: Group Project.ipynb
homeworks/.ipynb_checkpoints/: homework0-checkpoint.ipynb
homeworks/group/: Group Project.ipynb
homeworks/homework03/: setup.sh  (+1 more)
inclass/: Reading 2-1.ipynb
readings/lec36/: 3d_plot  3d_plot.cpp  CMakeLists.txt  Install Instructions.txt  Makefile  Reading 36-1.ipynb  Reading 36-2.ipynb  matplotlibcpp.h  minimal  minimal.cpp  pthread_2.cpp  setup.sh
readings/lec36/.ipynb_checkpoints/: Reading 36-1-checkpoint.ipynb
(+616 files in other folders)
